--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,9 +1,78 @@
 
-// Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+@import url('https://fonts.googleapis.com/css?family=Anonymous+Pro|Open+Sans');
 
-// Variables
-@import "variables";
+$color-primary: #DC3545;
+$color-secondary: lighten($color-primary, 10%);
+$contrast-primary: #E2DD4D;
+$contrast-secondary: #1878A9;
+$font-primary: 'Anonymous Pro', monospace;
+$font-secondary: 'Open Sans', sans-serif;
 
-// Bootstrap
-@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+*{
+	margin: 0;
+	padding: 0;
+	font-size: 1rem;
+	font-family: $font-primary;
+	box-sizing: border-box;
+}
+
+html{
+	font-size: 24px;
+}
+
+#app{
+	width: 100vw;
+}
+
+#app > *{
+	padding: 1rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 50vh;
+}
+
+#app > *:first-child{
+	background-color: $color-secondary;
+}
+
+#app > *:last-child{
+	background-color: $color-primary;
+}
+
+h2{
+	font-size: 2rem;
+}
+
+button{
+	display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    border: 1px solid $contrast-secondary;
+    cursor: pointer;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    background-color: $color-secondary;
+    color: $contrast-secondary;
+}
+
+button:hover{
+	background-color: lighten($color-secondary, 10%);
+}
+
+@media screen and(min-width: 768px) {
+	
+	#app{
+		display: grid;
+		grid-template-columns: 50% 50%;
+	}
+
+	#app > *{
+		height: 100vh;
+	}
+
+}
