--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,7 +8,7 @@
 }
 
 html {
-  font-size: 24px;
+  font-size: 18px;
 }
 
 #app {
@@ -41,8 +41,15 @@ h2 {
   font-size: 2rem;
 }
 
+.card-container {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 button {
-  display: inline-block;
+  display: block;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
@@ -65,6 +72,10 @@ button:hover {
 }
 
 @media screen and (min-width: 768px) {
+  html {
+    font-size: 20px;
+  }
+
   #app {
     display: grid;
     grid-template-columns: 50% 50%;
@@ -72,6 +83,12 @@ button:hover {
 
   #app > * {
     height: 100vh;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  html {
+    font-size: 24px;
   }
 }
 
