--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,7 +17,7 @@ $font-secondary: 'Open Sans', sans-serif;
 }
 
 html{
-	font-size: 24px;
+	font-size: 18px;
 }
 
 #app{
@@ -44,8 +44,12 @@ h2{
 	font-size: 2rem;
 }
 
+.card-container{
+	flex-direction: column;
+}
+
 button{
-	display: inline-block;
+	display: block;
     text-align: center;
     white-space: nowrap;
     vertical-align: middle;
@@ -66,6 +70,10 @@ button:hover{
 
 @media screen and(min-width: 768px) {
 	
+	html{
+		font-size: 20px;
+	}
+
 	#app{
 		display: grid;
 		grid-template-columns: 50% 50%;
@@ -73,6 +81,14 @@ button:hover{
 
 	#app > *{
 		height: 100vh;
+	}
+
+}
+
+@media screen and(min-width: 1024px) {
+	
+	html{
+		font-size: 24px;
 	}
 
 }
