--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,8 @@
-@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro|Open+Sans);* {
+@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro|Open+Sans);/* ------ COMMON ------ */
+
+* {
   margin: 0;
   padding: 0;
-  font-size: 1rem;
   font-family: "Anonymous Pro", monospace;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -20,6 +21,10 @@ html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -41,12 +46,21 @@ h2 {
   font-size: 2rem;
 }
 
-.card-container {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+/* ------ TIMER ------ */
+
+.timer-vertical {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-gap: .2rem;
+  font-size: 2rem;
 }
+
+.timer-vertical .time {
+  text-align: right;
+  font-weight: bold;
+}
+
+/* ------ CARDS ------ */
 
 button {
   display: block;
