--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,10 +8,11 @@ $contrast-secondary: #1878A9;
 $font-primary: 'Anonymous Pro', monospace;
 $font-secondary: 'Open Sans', sans-serif;
 
+/* ------ COMMON ------ */
+
 *{
 	margin: 0;
 	padding: 0;
-	font-size: 1rem;
 	font-family: $font-primary;
 	box-sizing: border-box;
 }
@@ -27,6 +28,7 @@ html{
 #app > *{
 	padding: 1rem;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	height: 50vh;
@@ -44,9 +46,21 @@ h2{
 	font-size: 2rem;
 }
 
-.card-container{
-	flex-direction: column;
+/* ------ TIMER ------ */
+
+.timer-vertical{
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+	grid-gap: .2rem;
+	font-size: 2rem;
 }
+
+.timer-vertical .time{
+	text-align: right;
+	font-weight: bold;
+}
+
+/* ------ CARDS ------ */
 
 button{
 	display: block;
@@ -68,7 +82,7 @@ button:hover{
 	background-color: lighten($color-secondary, 10%);
 }
 
-@media screen and(min-width: 768px) {
+@media screen and (min-width: 768px) {
 	
 	html{
 		font-size: 20px;
@@ -85,7 +99,7 @@ button:hover{
 
 }
 
-@media screen and(min-width: 1024px) {
+@media screen and (min-width: 1024px) {
 	
 	html{
 		font-size: 24px;
